# picx-app

./: .env.example  .eslintignore  .eslintrc-auto-import.json  .gitignore  .prettierignore  .prettierrc.js  CHANGELOG.md  README.md  auto-imports.d.ts  components.d.ts  index.html  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  uno.config.ts  vite.config.ts
.github/workflows/: main.yml
auth/: app.vue  nuxt.config.ts  package.json  pnpm-lock.yaml
auth/pages/: authorization.vue  index.vue
src/: App.vue  icons-env.d.ts  main.ts  styles.css  vite-env.d.ts  vue-i18n.d.ts  vue-router.d.ts
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: auth.rs  image.rs  main.rs  model.rs  utils.rs
src-tauri/src/assets/: private-key.pem
src/components/: CreateRepo.vue  GithubLink.tsx  Header.vue  InitRepo.vue  Layout.vue  LibraryCard.vue  Option.vue  RepoSetting.vue  RepoSettings.vue  TopOperate.vue
src/components/cell/: CellGroup.vue  index.vue
src/components/image-card/: index.vue
src/components/image-preview/: index.tsx
src/components/layout/: Aside.vue  Gallery.vue  Header.vue  Library.vue  index.vue
src/components/lead/: Step1.vue  Step2.vue  Step2Create.vue
src/composables/: arrayBufferToBinary.ts  bytesToMB.ts  dark.ts  fetch.ts  imageFileToUint8Array.ts  isImage.ts  now.ts  paramsSerializer.ts  replacePlaceholder.ts  uploadFilesToGitHub.ts  useCreateFolder.ts  useI18n.ts  useImageToBinary.ts  useRepoContent.ts  useResetRef.ts  useWriteBinaryFile.ts
src/constant/: index.ts
src/enum/: index.ts
src/language/: en-us.json  index.ts  zh-cn.json
src/pages/: Callback.vue  Home.vue  Lead.vue  Login.vue  Upload.vue  User.vue  callback.vue  home-back.vue  home.vue  index.vue  installation_callback.vue  installations.vue  layout.vue  lead.vue  login.vue  upload.vue  user.vue
src/pinia/: auth.ts  index.ts
src/recycle-bin/: index.ts
src/router/: index.ts
src/settings/: index.ts
src/store/: gallery.ts  index.ts  library.ts  route.ts  setting.ts  upload.ts  watermark.ts  window.ts
src/theme/: index.ts
src/types/: auth.ts  github.ts  index.ts  lead.ts  upload.ts
(+22 files in other folders)
