[package]
name = "picx-app"
version = "0.0.0"
description = "基于 GitHub API 开发的图床工具，提供图片上传托管、生成图片链接和常用图片工具箱服务。"
authors = ["fangyuan.leslie@gmail.com"]
license = "MIT"
repository = "https://github.com/picx-apps/picx-app"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.4", features = [
  "http-all",
  "window-all",
  "dialog-all",
  "updater",
  "path-all",
  "fs-all",
  "clipboard-write-text",
  "clipboard-read-text",
  "shell-open",
  "devtools",
] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11", features = ["json"] }
url = { version = "2", features = ["serde"] }
base64 = "0.21.5"
image = "0.24.7"
rand = "0.8.5"
chrono = "0.4.31"
jsonwebtoken = "9.1.0"
imageproc = "0.23.0"
rusttype = "0.9.3"
tokio = { version = "1.35.1", features = ["full"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
